# CAFA6-proteinprediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
blast/: README.md  run_blastp.py
cafa-model-notebooks/: baseline-protein-prediction-knn.ipynb  baseline-protein-prediction-svm.ipynb  baseline-protein-prediction.ipynb  cafa-6-ensemble-mlp.ipynb  cafa-6-esm2.ipynb  cafa-6-protT5.ipynb
ensemble/: ensemble_model.py  ensemble_utils.py  run_example.py
models/: __init__.py  baseline_knn.py  baseline_svm.py  embedding_models.py  ensemble_mlp.py  esm2_mlp.py  protbert_mlp.py  prott5_mlp.py  traditional_models.py
preprocessing/: README.md  cafa-6-analysis.ipynb  data_preprocessing.py  esm-embedding-cafa6.ipynb  utils.py
